--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,4 +42,4 @@ jobs:
       - name: Upload binary
         uses: actions/upload-artifact@v3
         with:
-          path: ${{ github.workspace }}/dist/newstyle/build/*
+          path: ${{ github.workspace }}/dist-newstyle/build/*
